--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 .content p {
 	margin: 0 auto; 
 	max-width: 1080px;
-	padding-bottom: 30px;
+	padding: 10px 0 30px 0;
 	font-family: 'OpenSansSemiBold', sans-serif;
 	text-align: left;
 }
@@ -74,6 +74,7 @@ img {
 
 h1 {
 	font-size: 2rem;
+	padding: 10px 0;
 }
 
 </style>
