--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,16 +10,15 @@
   </thead>
 
   <tbody>
-    <% @products.each do |product| %>
+  <% @products.each do |product| %>
       <tr>
+        <td><% print(product.name) %></td>
         <td><%= link_to 'Show', product %></td>
         <td><%= link_to 'Edit', edit_product_path(product) %></td>
         <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
-    <% end %>
+  <% end %>
   </tbody>
 </table>
-
-<br>
 
 <a><%= link_to 'New Product', new_product_path %></a>
