--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Product Listing</h1>
 
+<a><%= link_to 'Add New Product', new_product_path %></a>
+
 <table>
   <thead>
     <tr>
@@ -21,4 +23,64 @@
   </tbody>
 </table>
 
-<a><%= link_to 'New Product', new_product_path %></a>
+
+<div class="columns">
+
+  <div class="third">
+
+    <img src="http://pjb3.github.io/betastore/products/hat.jpg" />
+
+    <p class="text-align-center"><a href="#">Hat</a></p>
+
+  </div>
+
+  <div class="third">
+
+    <img src="http://pjb3.github.io/betastore/products/hoodie.jpg"/>
+
+    <p><a href="#">Hoodie</a></p>
+  </div>
+
+  <div class="third last">
+
+    <img src="http://pjb3.github.io/betastore/products/iphone_case.jpg"/>
+
+    <p><a href="#">iPhone Case</a></p>
+
+  </div>
+
+</div>
+
+  <div class="hr"></div>
+
+<div class="columns">
+
+  <div class="third">
+
+    <img src="http://pjb3.github.io/betastore/products/journal.jpg"/>
+
+    <p><a href="#">Journal</a></p>
+
+  </div>
+
+  <div class="third">
+
+    <img src="http://pjb3.github.io/betastore/products/shirt.jpg"/>
+
+    <p><a href="#">Shirt</a></p>
+
+  </div>
+
+  <div class="third last">
+
+    <img src="http://pjb3.github.io/betastore/products/sticker.jpg"/>
+
+    <p><a href="#">Sticker</a></p>
+
+  </div>
+
+</div>
+
+  <div class="hr"></div>
+
+
