--- a/app/views/logins/new.html.erb
+++ b/app/views/logins/new.html.erb
@@ -1,19 +1,25 @@
 <h1>New login</h1>
 
+
+<div class="form">
 <form method="POST" action="/log_in">
   <label>
-    Email
+    <p>Email</p>
     <input type="email" name="email" />
   </label>
 
   <label>
-    Password
+    <p>Password</p>
     <input type="password" name="password" />
   </label>
 
-  <button type="submit">Log In</button>
+  <button type="submit" class="primary-button">Log In</button>
 </form>
 
 <% if flash[:alert] %>
   <p style="color: red"><%= flash[:alert] %></p>
 <% end %>
+
+</div>
+
+<br/>
