--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,7 +2,7 @@
 
 <a><%= link_to 'Add New Product', new_product_path %></a>
 
-<table>
+<!-- <table>
   <thead>
     <tr>
       <th></th>
@@ -21,20 +21,24 @@
       </tr>
   <% end %>
   </tbody>
-</table>
-
+</table> -->
 
 <div class="columns">
 
-  <div class="third">
+    <% @products.each_with_index do |product, i| %>
 
-    <img src="http://pjb3.github.io/betastore/products/hat.jpg" />
+      <div class="third <%= i%3 == 2 ? 'last' : ''%>">
+        <div><%= link_to product.name, product_path(product) %></div>
+        <div>Created <%= time_ago_in_words product.created_at %></div>
+        <div><%= number_to_currency(product.price) %></div>
+        <img src="<%= product.url %>" />
+      </div>
+    <% end %>
 
-    <p class="text-align-center"><a href="#">Hat</a></p>
+</div>
+<div class="hr"></div>
 
-  </div>
-
-  <div class="third">
+  <!-- <div class="third">
 
     <img src="http://pjb3.github.io/betastore/products/hoodie.jpg"/>
 
@@ -81,6 +85,6 @@
 
 </div>
 
-  <div class="hr"></div>
+  <div class="hr"></div> -->
 
 
