--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,7 @@
 <h1>New product</h1>
 
+<div class="form">
 <%= render 'form' %>
+</div>
 
-<%= link_to 'Back', products_path %>
+<p>Want to go back to products? <%= link_to 'Go Back', products_path %></p>
