--- a/app/views/logins/_form.html.erb
+++ b/app/views/logins/_form.html.erb
@@ -1,17 +1,12 @@
-<%= form_for(@login) do |f| %>
-  <% if @login.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@login.errors.count, "error") %> prohibited this login from being saved:</h2>
+<%= form_tag log_in_path do |login_form| %>
 
-      <ul>
-      <% @login.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+    <p><%= label_tag 'customer_email', 'Email' %></p>
+    <%= email_field_tag 'email', params[:email] %>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <p><%= label_tag 'login_password', 'Password' %></p>
+    <%= password_field_tag 'password', params[:email] %> 
+
+
+  <%= button_tag 'Login' %>
 <% end %>
+
