--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,10 @@
 <p id="notice"><%= notice %></p>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
-<%= link_to 'Back', products_path %>
+<div class="single-product">
+	<img src="<%= @product.url %>" />
+	<h1><%= @product.name %></h1>
+	<div><strong>Price: </strong> <%= number_to_currency(@product.price) %></div>
+	<div>Created:</strong> <%= time_ago_in_words @product.created_at %></div>
+</div>
+
+<hr />
