--- a/app/views/admin/products/show.html.erb
+++ b/app/views/admin/products/show.html.erb
@@ -7,6 +7,7 @@
 		<h1><%= @product.name %></h1>
 		<p><strong>Price: </strong> <%= number_to_currency(@product.price) %></p>
 		<p>Created:</strong> <%= time_ago_in_words @product.created_at %></p>
+    <p><a href="#">Add to card</a></p>
 	</div>
 
 </div>
