--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -173,8 +173,7 @@ button,
 input[type="submit"] {
 	padding: 15px;
 	text-align: center;
-	background: #59c5c6!important;
-	width: 80px;
+	width: auto;
 	height: auto;
 	color: #ffffff;
 	font-weight: bold;
@@ -196,8 +195,36 @@ input[type="submit"] {
 	display: block;
 }
 
-.primary-button a:link {
+.primary-button a:link, .primary-button {
 	text-decoration: none;
+	background: #59c5c6!important;
+}
+
+.add-to-cart-button  {
+	padding: 15px;
+	text-align: center;
+	background: #999999!important;
+	width: auto;
+	height: auto;
+	color: #ffffff;
+	font-weight: bold;
+	border-radius: 5px 5px 5px 5px;
+	-moz-border-radius: 5px 5px 5px 5px;
+	-webkit-border-radius: 5px 5px 5px 5px;
+	-o-border-radius: 5px 5px 5px 5px;
+	box-shadow: 0 -3px rgba(0, 0, 0, 0.1) inset;
+	-moz-box-shadow: 0 -3px rgba(0, 0, 0, 0.1) inset;
+	-webkit-box-shadow: 0 -3px rgba(0, 0, 0, 0.1) inset;
+	-o-box-shadow: 0 -3px rgba(0, 0, 0, 0.1) inset;
+	transition: opacity 0.3s linear;
+	-moz-transition: opacity 0.3s linear;
+	-webkit-transition: opacity 0.3s linear;
+	text-decoration: none;
+	text-transform: uppercase;
+	margin-top: 15px;
+	clear: both;
+	display: block;
+	margin: 0 auto;
 }
 
 #footer {
